@@ -640,6 +640,8 @@ X86_INST(mov_rm32_r32)
 	UOP(move,	DR32,	0,	0,	DRM32,	0,	0,	0,	0)
 X86_INST(mov_r8_rm8)
 	UOP(move,	DRM8,	0,	0,	DR8,	0,	0,	0,	0)
+X86_INST(mov_r16_rm16)
+	UOP(move,	DRM16,	0,	0,	DR16,	0,	0,	0,	0)
 X86_INST(mov_r32_rm32)
 	UOP(move,	DRM32,	0,	0,	DR32,	0,	0,	0,	0)
 X86_INST(mov_al_moffs8)
